5 tipe soal based on nisn